--- a/pom.xml
+++ b/pom.xml
@@ -21,22 +21,38 @@
         <assertj-core.version>3.19.0</assertj-core.version>
         <lombok.version>1.18.30</lombok.version>
         <junit.version>4.13.2</junit.version>
+        <testcontainers.version>1.17.4</testcontainers.version>
+        <junit-jupiter.version>5.10.1</junit-jupiter.version>
+        <junit-jupiter.test.version>1.19.3</junit-jupiter.test.version>
+        <mongodb.version>1.19.3</mongodb.version>
+        <wiremock.version>3.3.1</wiremock.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit-jupiter.test.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mongodb</artifactId>
+            <version>${mongodb.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -50,6 +66,12 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>${wiremock.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
