--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,8 @@
         <assertj-core.version>3.19.0</assertj-core.version>
         <lombok.version>1.18.30</lombok.version>
         <junit.version>4.13.2</junit.version>
-        <testcontainers.version>1.17.4</testcontainers.version>
         <junit-jupiter.version>5.10.1</junit-jupiter.version>
-        <junit-jupiter.test.version>1.19.3</junit-jupiter.test.version>
-        <mongodb.version>1.19.3</mongodb.version>
+        <testcontainers.version>1.17.4</testcontainers.version>
         <wiremock.version>3.3.1</wiremock.version>
     </properties>
     <dependencies>
@@ -34,27 +32,33 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+<!--        TEST CONTAINERS-->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>${junit-jupiter.version}</version>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>${junit-jupiter.test.version}</version>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>mongodb</artifactId>
-            <version>${mongodb.version}</version>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
