--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,11 @@ spring:
     mongodb:
       auto-index-creation: true
       uri: mongodb://admin:admin@localhost:27017/offers
+api:
+  offer:
+    http:
+      config:
+        port: 5057,
+        uri: http://ec2-3-120-147-150.eu-central-1.compute.amazonaws.com:5057/offers,
+        connectionTimeout: 1000
+        readTimeout: 1000
