--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <junit-jupiter.version>5.10.1</junit-jupiter.version>
         <testcontainers.version>1.17.4</testcontainers.version>
         <wiremock.version>3.3.1</wiremock.version>
+        <awaitility.version>4.2.0</awaitility.version>
     </properties>
     <dependencies>
         <dependency>
@@ -75,6 +76,12 @@
             <groupId>org.wiremock</groupId>
             <artifactId>wiremock</artifactId>
             <version>${wiremock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
