--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
-            <version>git</version>
+            <version>${springfox-boot-starter.version}</version>
         </dependency>
     </dependencies>
     <build>
