--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <wiremock.version>3.3.1</wiremock.version>
         <awaitility.version>4.2.0</awaitility.version>
         <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
+        <spring-boot-starter-validation.version>3.2.0</spring-boot-starter-validation.version>
     </properties>
     <dependencies>
         <dependency>
@@ -90,6 +91,12 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${spring-boot-starter-validation.version}</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
