--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <awaitility.version>4.2.0</awaitility.version>
         <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
         <spring-boot-starter-validation.version>3.2.0</spring-boot-starter-validation.version>
+        <java-jwt.version>4.0.0</java-jwt.version>
     </properties>
     <dependencies>
         <dependency>
@@ -96,7 +97,27 @@
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>${spring-boot-starter-validation.version}</version>
         </dependency>
-
+        <!-- JWT -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${java-jwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- CONFIGURATION_PROPERTIES -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
