test: add integration tests for authenticate validation

--- a/src/main/resources/validationMessages.properties
+++ b/src/main/resources/validationMessages.properties
@@ -16,3 +16,6 @@ salary.size=salary should not exceed 50 characters
 jobUrl.not.empty=offerUrl {not.empty.validation.message}
 jobUrl.not.null=offerUrl {not.null.validation.message}
 jobUrl.size=offerUrl should not exceed 255 characters
+
+username.not.blank=username {not.empty.validation.message}
+password.not.blank=password {not.empty.validation.message}
